--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ jdk:
 script: sbt test:compile
 
 after_success:
-   - (sbt clean coverage "test:runMain demo.All" test || true):runMain   - sbt coverageReport
+   - (sbt clean coverage "test:runMain demo.All" test || true)
+   - sbt coverageReport
    - bash <(curl -s https://codecov.io/bash)
