--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,7 +12,7 @@ com.fortysevendeg.lambdatest {
   // output a stack trace of any unexpected exceptions
   outExceptionTrace = true
 
-  // number of charactersa to endenteach level of output
+  // number of charactersa to indent each level of output
   indent = 2
 
   // use colors in the output
@@ -20,4 +20,13 @@ com.fortysevendeg.lambdatest {
 
   // output only those parts that contain failures
   onlyIfFail = false
+
+  // set of string tags
+  // if empty no actions are skipped
+  // if non-empty actions without any of these tags are skipped
+  includeTags = []
+
+  // set of string tags
+  // actions with any of these tags are skipped even if includeTags is empty
+  excludeTags = ["ignore"]
 }
