--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,12 @@ after_success:
    - (sbt clean coverage "test:runMain demo.All" "test:runMain coverage.All" test || true)
    - sbt coverageReport
    - bash <(curl -s https://codecov.io/bash)
+
+before_install:
+ - export PATH=${PATH}:./vendor/bundle
+
+install:
+   - rvm use 2.2.3 --install --fuzzy
+   - gem update --system
+   - gem install sass
+   - gem install jekyll -v 3.2.1
