--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala:
   - 2.12.5
 
 jdk:
-  - oraclejdk8
+  - openjdk8
 
 # Demo tests are designed to fail; so only test compile
 script: sbt lambda-test/test:compile
@@ -17,8 +17,5 @@ before_install:
  - export PATH=${PATH}:./vendor/bundle
 
 install:
-   - rvm use 2.2.5 --install --fuzzy
-   - gem update --system
-   - gem install sass
-   - gem install ruby_dep -v 1.3.1
-   - gem install jekyll -v 3.4.3
+ - rvm use 2.6.5 --install --fuzzy
+ - gem install jekyll -v 4
